@@ -8,12 +8,13 @@ sqitch-rebase-usage - Sqitch rebase usage statement
 
 =head1 Options
 
-       --to-target <tag>    rebase to target
-       --mode <mode>        deploy failure reversion mode (all, tag, or change)
-       --verify             run verify scripts after deploying each change
-       --no-verify          do not run verify scripts
-    -s --set                set a database client variable
-    -r --set-revert         set a database client revert variable
-    -r --set-deploy         set a database client deploy variable
-       --log-only           log changes without running them
-    -y                      disable the prompt before reverting
+       --onto-target <change>  revert to target
+       --upto-target <change>  deploy to target
+       --mode <mode>           deploy failure reversion mode (all, tag, or change)
+       --verify                run verify scripts after deploying each change
+       --no-verify             do not run verify scripts
+    -s --set                   set a database client variable
+    -r --set-revert            set a database client revert variable
+    -r --set-deploy            set a database client deploy variable
+       --log-only              log changes without running them
+    -y                         disable the prompt before reverting
